--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,6 @@
     overflow: hidden;
 }
 
-
 /** 竖向滚css **/
 .screen-all {
     position: absolute;
@@ -19,8 +18,8 @@
     height: 100%;
     width: 100%;
 
-    -webkit-transition:  -webkit-transform 0.6s ease;
-    transition: transform  0.6s ease;
+    -webkit-transition: -webkit-transform 0.6s ease;
+    transition: transform 0.6s ease;
 }
 
 .screen {
@@ -41,35 +40,64 @@
     background-size: 500px 455px;
     background-repeat: no-repeat;
 }
+
 /* scroll 界面基本配置 */
 
-#screen00{
+#screen00 {
     background: #ea245d;
 }
 
-#screen01{
+#screen01 {
     background: #ffffff;
 }
 
-#screen02{
+#screen02 {
     background: #e94661;
 }
 
-
 /** first **/
-.font-mm{ background-position:  0 0;  width: 89px;  height:33px;  }
-.font-yu{ background-position: -186.5px 0; width: 22.5px; height: 34px;}
-.font-why-mm{background-position: -209px 0; width: 119px; height: 34px; }
-.font-xy{ background-position: 0 -33.5px;  width: 82px; height: 52.5px;}
+.font-mm {
+    background-position: 0 0;
+    width: 89px;
+    height: 33px;
+}
 
-.font-say{ background-position: 0 -86.5px; width: 172.5px; height: 27.5px;}
+.font-yu {
+    background-position: -186.5px 0;
+    width: 22.5px;
+    height: 34px;
+}
+
+.font-why-mm {
+    background-position: -209px 0;
+    width: 119px;
+    height: 34px;
+}
+
+.font-xy {
+    background-position: 0 -33.5px;
+    width: 82px;
+    height: 52.5px;
+}
+
+.font-say {
+    background-position: 0 -86.5px;
+    width: 172.5px;
+    height: 27.5px;
+}
 
 /** second **/
-.font-xy-who{ background-position: -89px 0 ; width: 97.5px; height: 34px;}
+.font-xy-who {
+    background-position: -89px 0;
+    width: 97.5px;
+    height: 34px;
+}
 
-
-.font-game{ background-position: 0 -114px; width: 130px; height: 21px}
-
+.font-game {
+    background-position: 0 -114px;
+    width: 130px;
+    height: 21px
+}
 
 .arrow {
     position: absolute;
@@ -77,17 +105,18 @@
     left: 50%;
     margin-left: -14.5px;
 
-    -webkit-animation: pointUp  1.2s ease-in 0s infinite;
+    -webkit-animation: pointUp 1.2s ease-in 0s infinite;
 }
 
 .icon {
     background-image: url("../../imgs/icon.png");
     background-size: 58px 17px;
 }
+
 .icon-arrow {
     width: 29px;
     height: 17px;
-    background-position: 0  0px;
+    background-position: 0 0px;
 }
 
 .icon-arrow-inv {
@@ -97,55 +126,58 @@
 }
 
 /*.women{*/
-    /*background-position:  0 -225.5px;*/
-    /*width: 82px;*/
-    /*height: 121px;*/
+/*background-position:  0 -225.5px;*/
+/*width: 82px;*/
+/*height: 121px;*/
 /*}*/
 
-.heart{
-    background-position:  -89px -225.5px;
+.heart {
+    background-position: -89px -225.5px;
     width: 26px;
     height: 24.5px;
 }
 
-.question{
-    background-position:  -117px -225.5px;
+.question {
+    background-position: -117px -225.5px;
     width: 47px;
     height: 58.5px;
 }
 
-.huzi{
+.huzi {
     background-position: -89px -283.5px;
     width: 75px;
     height: 23.5px;
 }
 
-
 /** 位置 **/
-.heart{
+.heart {
     top: 5%;
     left: 50%;
     position: absolute;
-    margin-left:  -13px;
+    margin-left: -13px;
 }
-.first-center{
+
+.first-center {
     position: absolute;
     top: 50%;
     margin-top: -157.5px;
     width: 100%;
 }
-.font-xy{
+
+.font-xy {
     position: absolute;
     top: 32px;
     left: 26px;
 }
-.circle-dot{
+
+.circle-dot {
     overflow: hidden;
     margin: 0;
     padding: 0;
     margin-top: 11px;
 }
-.circle-dot >li{
+
+.circle-dot > li {
     margin: 0;
     padding: 0;
     width: 6px;
@@ -155,8 +187,8 @@
     background: #a9123c;
 }
 
-.bg-circle-xy{
-     width: 120px;
+.bg-circle-xy {
+    width: 120px;
     height: 120px;
     background: #ffffff;
     border-radius: 65px;
@@ -164,8 +196,7 @@
     position: relative;
 }
 
-
-.circle-middle{
+.circle-middle {
     position: relative;
     top: 25px;
     background: #292a30;
@@ -176,62 +207,62 @@
 
 }
 
-.circle-middle-wo{
+.circle-middle-wo {
     position: relative;
     top: 25px;
-    background-position:  -327px 0;
+    background-position: -327px 0;
     width: 152px;
     height: 153px;
 }
 
-
-.question{
+.question {
     position: absolute;
     top: 24px;
     left: 44px;
 }
 
-.huzi{
+.huzi {
     position: absolute;
     bottom: 33px;
     left: 34px;
 }
 
-.font-xy-who{
+.font-xy-who {
 
 }
 
-.mt-circle{
+.mt-circle {
     margin-top: 30px;
     margin-bottom: 18px;
 }
 
-.list-info{
+.list-info {
     overflow: hidden;
     margin: 0;
     padding: 0;
 }
 
-.list-info > li{
+.list-info > li {
     margin-bottom: 11px;
     font-size: 16px;
     color: #343434;
     text-align: left;
 }
 
-.list-info > li >span:before{
+.list-info > li > span:before {
 
 }
 
-.list-info.info-02{
+.list-info.info-02 {
     width: 240px;
 }
-.list-info.info-02 >li{
+
+.list-info.info-02 > li {
     color: #ffffff;
 
 }
 
-.trans{
+.trans {
     width: 0;
     height: 0;
     border-left: 4px solid transparent;
@@ -239,29 +270,32 @@
     /*border-bottom: 7px solid transparent;*/
     border-top: 7px solid #ea245d;
 }
-.trans-right{
-    -webkit-transform : rotate(-90deg);
-    transform : rotate(-90deg);
+
+.trans-right {
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg);
 
     position: relative;
     top: -2px;
     margin-right: 8px;
 }
 
-.trans.white{
+.trans.white {
     border-top: 7px solid #ffffff;
 }
-.women{
+
+.women {
     position: absolute;
     bottom: 3px;
     left: 36px;
 }
 
-.font-game{
+.font-game {
     position: relative;
     top: 4px;
 }
-.btnBase{
+
+.btnBase {
     margin: 0;
     border: 0;
     padding: 10px 57px;
@@ -273,10 +307,10 @@
     left: 50%;
     margin-left: -122px;
     text-align: center;
-    box-shadow: 0px 3px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.3);
 }
 
-.font-submit{
-    background-position:  -129.5px -114px;
-
+.font-submit {
+    background-position: -129.5px -114px;
 }
+
