--- a/src/css/question.css
+++ b/src/css/question.css
@@ -490,3 +490,14 @@ a:hover {
     -ms-box-flex: 9;
     -webkit-box-flex: 9;
 }
+
+
+.shareHand {
+    background-position: 0 -352.5px;
+    width: 72px;
+    height: 69.5px;
+    position: absolute;
+    right:11px;
+    top: 14px;
+
+}
